# tracko

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
TS_TP/: app.py
TS_TP/core/: database.py  settings.py
TS_TP/routers/: task_router.py
backend/: .env  README.md  pyproject.toml  sigo.db  tracko.db  ts-tp.db
backend/TS_TP/: app.py
backend/TS_TP/core/: core_exc.py  database.py  deps.py  security.py  settings.py  uow.py
backend/TS_TP/domain/: __init__.py
backend/TS_TP/domain/auth/: auth_exc.py  auth_services.py
backend/TS_TP/domain/seeds/: seed_users.py
backend/TS_TP/domain/shared/: shared_schemas.py
backend/TS_TP/domain/task/: task_exc.py  task_models.py  task_schemas.py  task_services.py
backend/TS_TP/domain/user/: user_enums.py  user_exc.py  user_models.py  user_schemas.py  user_services.py
backend/TS_TP/domain/users_tasks/: users_tasks_models.py
backend/TS_TP/repositories/: task_repo.py  user_repo.py
backend/TS_TP/routers/: auth_router.py  task_router.py  user_router.py
backend/tests/: conftest.py  utils.py
backend/tests/integration/: test_auth_router.py  test_task_router.py  test_team_router.py  test_user_router.py
backend/tests/integration/task/: test_task_create.py
backend/tests/integration/task copy/: test_user_create.py
backend/tests/integration/team/: test_team_create.py
backend/tests/integration/user/: test_user_create.py
backend/tests/unit/: test_auth_service.py  test_auth_services.py  test_task_service.py  test_task_services.py  test_team_service.py  test_team_services.py  test_user_service.py  test_user_services.py
backend/tracko/: app.py
backend/tracko/core/: core_exc.py  database.py  deps.py  security.py  uow.py
backend/tracko/domain/auth/: auth_exc.py  auth_services.py
backend/tracko/domain/seeds/: seed_users.py
backend/tracko/domain/shared/: shared_exc.py
backend/tracko/domain/task/: task_exc.py  task_models.py  task_schemas.py  task_services.py
backend/tracko/domain/team/: team_exc.py  team_models.py  team_schemas.py  team_services.py
backend/tracko/domain/user/: user_enums.py  user_exc.py  user_models.py  user_schemas.py  user_services.py
backend/tracko/domain/user_team/: user_team_exc.py  user_team_models.py  user_team_schemas.py
backend/tracko/domain/users_tasks/: users_tasks_models.py
backend/tracko/repositories/: task_repo.py  team_repo.py  user_repo.py  user_team_repo.py
backend/tracko/routers/: auth_router.py  task_router.py  team_router.py  user_router.py
frontend/: package-lock.json
frontend/src/: App.tsx  api.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/services/: auth.ts  task.ts  user.ts
