[project]
name = "TS-TP"
version = "0.1.0"
description = ""
authors = [
    {name = "guamaralb",email = "gu.amaralb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
taskipy = "^1.14.1"
ruff = "^0.14.13"
pytest-asyncio = "^1.3.0"
factory-boy = "^3.3.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"


[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev TS_TP/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=TS_TP -vv'
post_test = 'coverage html'

[tool.coverage.run]
core = 'ctrace'
concurrency = ['thread', 'greenlet']
