[project]
name = "tracko"
version = "0.1.0"
description = ""
authors = [
    {name = "guamaralb",email = "gu.amaralb@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "tzdata (>=2025.3,<2026.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "pwdlib (>=0.3.0,<0.4.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
taskipy = "^1.14.1"
ruff = "^0.14.13"
pytest-asyncio = "^1.3.0"
factory-boy = "^3.3.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"


[tool.taskipy.tasks]
pre_format = 'ruff check --fix'
format = 'ruff format'
pre_run = 'task format'
run = 'fastapi dev tracko/app.py'
pre_test = 'task format'
test = 'pytest -s -x --cov=tracko -vv'
post_test = 'coverage html'

[tool.coverage.run]
core = 'ctrace'
concurrency = ['thread', 'greenlet']
